Added error messages to ui
