# src/server/api/routes/routes.ts
@@ -54,7 +54,7 @@ const models: TsoaRoute.Models = {
         "additionalProperties": true,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "ConnectionTestResult": {
+    "ConnectionResult": {
         "dataType": "refObject",
         "properties": {
             "success": {"dataType":"boolean","required":true},
